Crea feature
Se realiza implementación para crear feature. Se reutiliza el DTO FeatureDetailDTO y modifica para que tenga una lista de FeatureConfigDTI, por lo tanto fue necesario cambiar el servicio "getFeatureById"